finimalism7.css
/* ... */
.mdl-slider-background-upper {
  background: #92dcf499;
}

.layout-desktop div:not(.sectionTitleContainer-cards) > .sectionTitle-cards {
  margin: 0;
  padding-bottom: 0.2em;
  padding-top: .5em;
}

.layout-mobile .homePage .section1.verticalSection .itemsContainer .card.overflowBackdropCard {
  width: 13.88em !important;
  margin-top: 0em;
  margin-bottom: 0em;
}

.layout-mobile #indexPage .overflowBackdropCard, .overflowSmallBackdropCard {
  width: 12.88em;
  margin: 0em !important;
  margin-right: -0.5em !important;
}

/* Push scroll buttons to the right */
.homePage .section1.verticalSection .sectionTitle-cards + .emby-scrollbuttons {
    margin-left: auto;
}

.emby-scrollbuttons-button > .material-icons {
  display: block;
  min-height: 24px;
  min-width: 24px;
  margin-top: -0.3em;
}

/* Adjust alignment for the cards within the Continue Watching section */
.layout-desktop .homePage .section1.verticalSection .itemsContainer .card.overflowBackdropCard {
    width: 27.8em;
    margin-top: 0em;
    font-size: 90% !important;
}

/* Adjust the card size for smaller screens if needed */
@media all and (max-width: 767px) {
    .homePage .section1.verticalSection .itemsContainer .card.overflowBackdropCard {
        width: 250px !important;
        font-size: 90% !important;
    }
}

.layout-desktop #childrenContent .childrenItemsContainer.itemsContainer > * {
    scroll-snap-align: center; 
}

.layout-desktop .overflowBackdropCard {
   width: 25em;
}

/* Adjust the size of the card image */
.verticalSection .card img {
    width: 100%;
    height: auto;
}

.detailVerticalSection .nextUpItems {
    margin-top: -5px;
}

/* hide Live TV text on Homepage */
.sectionTitleContainer.sectionTitleContainer-cards.padded-left > .sectionTitle.sectionTitle-cards {
    display: none;
}

/* hide Live TV shortcuts on Homepage */
.padded-top.padded-bottom.scrollSlider.focuscontainer-x {
    display: none;
}

/* Reduce space between My Media buttons and Continue Watching */
.layout-desktop .sectionTitle.sectionTitle-cards.padded-left + .itemsContainer {
    margin-bottom: 0em;
    padding-top: 0em;
}

/* Reduce space between My Media buttons and Continue Watching */
.layout-mobile .sectionTitle.sectionTitle-cards.padded-left + .itemsContainer {
    margin-bottom: 0em;
    padding-top: 0.5em;
}

/* Position release year, ratings */
.mediaInfoItem {
  margin-top: 0.6em !important;
}

/* Raise Next Up cards on homepage */
.sectionTitleContainer-cards {
  margin: 0;
  padding-top: 0em;
}

.itemName {
  margin: 0em 0 !important;
  padding-top: 0em;
}
.infoText {
  max-width: 100%;
  min-width: 0;
  text-align: left;
}
.subtitle {
  margin: .15em 0 .2em -1em;
  padding-left: 0em;
}

/* For mobile devices with a maximum width of 426px (portrait orientation) */
@media only screen and (max-width: 426px) {
  .homePage .section1.verticalSection .sectionTitle-cards {
    margin-right: -3.5em;
    margin-left: 10px;
  }
}

/*Position Continue Watching card */
.layout-mobile .homePage .section1.verticalSection .sectionTitle-cards {
  margin-right: 0.5em;
  margin-left: 10px;
}

.layout-mobile .homePage .section1.verticalSection .sectionTitle-cards {
  margin-top: 0.5em !important;
  margin-left: 10px;
}

/* Tighter My Media buttons */
.homeLibraryButton {
  margin-left: 1em !important;
  margin-right: 1em !important;
  min-width: 7em;
}

/* Reposition A-Z */

.layout-desktop .alphaPickerButton-vertical {
    width: 3vw;
}

.layout-desktop .alphaPickerButton {
    padding: .2em .4em;
}

.layout-desktop .alphaPicker-fixed {
    top: 17vh;
    top: max(env(safe-area-inset-top),17vh);

}

.cardOverlayFab-primary {
  background-color: rgba(0,0,0,0);
  font-size: 100%;
  height: 3em;
  left: 50%;
}

.infoWrapper {
  min-width: 52%;
  max-width: 100%;
}

/* Padding on detailPage action buttons */

@media (orientation: landscape) {
.layout-mobile .detailButton {
    padding-left: 1.8em !important;
    padding-right: 1.8em !important;
  }
}

@media (orientation: portrait) {
.layout-mobile .detailButton {
    padding-left: 1em !important;
    padding-right: 1em !important;
  }
}

@media (max-width: 768px) and (orientation: portrait) {
    .mainDetailButtons.focuscontainer-x {
        margin-bottom: 0em;
        margin-top: 0em;
    }
}

@media (max-width: 32em) and (orientation: portrait) {
  .layout-mobile [dir="ltr"] .mainDetailButtons {
    margin-bottom: 0;
    padding-left: 9em;
    font-size: 73%;
  }
}

@media (min-width: 50em) {
  .layout-mobile [dir="ltr"] .mainDetailButtons {
    font-size: 85%;
    margin-bottom: 0em;
    margin-top: 0em;
  }
}

.trackSelections .selectContainer {
  font-size: 10pt;
  overflow: hidden;
  }
}

@media (max-width: 50em) {
.trackSelections .selectContainer {
  font-size: 8pt;
  overflow: hidden;
  }
}

/* Live TV Guide */

.programCell {
  background: transparent !important;
}

.programCell-active {
  background: rgba(6, 161, 217, 0.05) !important;
}

.programCell-movie {
  background: transparent !important;
}

.guideProgramNameText {
  font-weight: 400;
  margin: 0;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 80%;
}

.channelPrograms {
  white-space: wrap;
}

#detailPage .layout-mobile .card.overflowBackdropCard.card-withuserdata {
    width: 18.15em !important; 
}

/* TV Mode */

.layout-tv .noHeaderRight .headerRight, .noHomeButtonHeader .headerHomeButton {
	display: inline-flex !important;
}

.layout-tv .paper-icon-button-light {
	display: inline-flex !important;
}

.layout-tv .mainDrawer.hide.transition.touch-menu-la.drawer-open {
	display: block !important;
}

.layout-tv .portraitCard {
	width: 12.5%;
}

.layout-tv .detailPageWrapperContainer {
	border-collapse: collapse;
	border-spacing: 0;
	margin-top: 27em;
}
/* ... */

